Fixed warnings produced by gcc-4.6.0. https://bugs.webkit.org/show_bug.cgi?id=62168

Patch by Ahmad Sharif <asharif@chromium.org> on 2011-08-23
Reviewed by Adam Barth.

* dom/Element.cpp:
(WebCore::Element::recalcStyle):
* platform/ScrollAnimatorNone.cpp:
(WebCore::ScrollAnimatorNone::PerAxisData::curveAt):
(WebCore::ScrollAnimatorNone::PerAxisData::curveDerivativeAt):
* thirdparty: Copied from Source/WebCore/thirdparty.

Canonical link: https://commits.webkit.org/82607@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93631 268f45cc-cd09-0410-ab3c-d52691b4dbfc